Fixing CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,4 @@ endif(NOT OPENGL_FOUND)
 find_package( OpenCV REQUIRED )
 
 add_executable( render_camera render_camera.cpp )
-target_link_libraries( tutorial04 -lGL -lglut -lglfw -lGLEW -lGLU ${OpenCV_LIBS})
+target_link_libraries( render_camera -lGL -lglut -lglfw -lGLEW -lGLU ${OpenCV_LIBS})
